--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,15 @@
 # These are required for developing the package (running the tests, building
 # the documentation) but not necessarily required for _using_ it.
+attrs >=18.1.0  # required in order to import ophyd test fixtures
 bluesky
 codecov
+caproto  # required in order to import ophyd test fixtures
+curio  # required in order to import ophyd test fixtures
 coverage
 flake8
-ophyd
-pytest
+# TEMPORARY UNTIL https://github.com/NSLS-II/ophyd/pull/682 IS RELEASED
+git+git://github.com/awalter-bnl/ophyd@add-configure
+pytest >=3.9
 sphinx
 # These are dependencies of various sphinx extensions for documentation.
 ipython
@@ -13,3 +17,4 @@ matplotlib
 numpydoc
 sphinx-copybutton
 sphinx_rtd_theme
+trio  # required in order to import ophyd test fixtures
