--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
 style = pep440-post
-versionfile_source = suitcase/mongo/_version.py
-versionfile_build = suitcase/mongo/_version.py
+versionfile_source = suitcase/mongo_layout1/_version.py
+versionfile_build = suitcase/mongo_layout1/_version.py
 tag_prefix = v
